--- a/MyPic/src/main/res/values/strings.xml
+++ b/MyPic/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">MyPic</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_process_image">ProcessImageActivity</string>
+
+    <string name="shutter_button">Tomar Foto</string>
 
 </resources>
