--- a/MyPic/src/main/res/values/strings.xml
+++ b/MyPic/src/main/res/values/strings.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <string name="app_id">171483252895769</string>
     <string name="app_name">MyPic</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_process_image">Process Image</string>
     <string name="shutter_button">Tomar Foto</string>
     <string name="apply_effect_label_button">Apply Effect</string>
     <string name="apply_text_label_button">Apply Text</string>
-
+    <string name="title_activity_preview_camera">My Pic</string>
+    <string name="facebook_login_button_label">Login</string>
+    <string name="facebook_logout_button_label">Log out</string>
 </resources>
